Fix header alignment

--- a/styles.css
+++ b/styles.css
@@ -26,8 +26,18 @@ body {
     flex: 1 1 25%;
 }
 
+.header {
+    justify-content: center;
+    gap: 50px;
+}
+
 .headLeft {
     flex-grow: 2;
+    max-width: 450px;
+}
+
+.headRight {
+    max-width: 450px;
 }
 
 .headLogo {
